# nuremics-studio

./: .gitignore  LICENSE  LICENSE_TRADEMARK  README.md  pixi.toml  pyproject.toml  ruff.toml
src/: DEMO_APP_notebook.py  nuRemics_App.py  utils.py  widgets.py
src/nuremics_gui/: nuRemics_App.py
src/nuremics_gui/core/: update.py  utils.py  widgets.py
src/nuremics_studio/: nuRemics_App.py
src/nuremics_studio/apps/DEMO_APP/: update.py  utils.py  widgets.py
src/nuremics_studio/core/: __init__.py  update.py  utils.py  widgets.py
src/nuremics_studio/resources/: features.json  features.yml
